# modbus-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  cREADME.md
.github/workflows/: rust.yml
examples/: client.rs
src/: binary.rs  client.rs  lib.rs  scoped.rs  tcp.rs
src/tcp/: mod.rs  protocol.rs
test/: diagslave
test-server/: Cargo.toml  build.rs  lib.rs
tests/: build.rs  lib.rs  test-server.c
