[package]
name = "modbus"
version = "0.4.1"
authors = ["Falco Hirschenberger <falco.hirschenberger@gmail.com>"]
repository = "https://github.com/hirschenberger/modbus-rs.git"
homepage = "https://github.com/hirschenberger/modbus-rs.git"
documentation = "https://hirschenberger.github.io/modbus-rs"
license = "MIT"
readme = "README.md"
description = "Pure Rust modbus implementation"
keywords = ["modbus", "hardware"]

[dependencies]
enum_primitive = "0.1.0"
num = "0.1.27"
rustc-serialize = "0.3.16"
bincode = "0.5"
byteorder = "0.5"

[dev-dependencies]
modbus-test-server = {path = "test-server", version="0.0.*"}
clap = "2.5"

[features]
default=[]
modbus-server-tests = ["modbus-test-server/modbus-server-tests"]
