[package]
name = "modbus"
version = "0.5.2"
authors = ["Falco Hirschenberger <falco.hirschenberger@gmail.com>"]
repository = "https://github.com/hirschenberger/modbus-rs.git"
homepage = "https://github.com/hirschenberger/modbus-rs.git"
documentation = "https://hirschenberger.github.io/modbus-rs"
license = "MIT"
readme = "README.md"
description = "Pure Rust modbus implementation"
keywords = ["modbus", "hardware"]

[dependencies]
enum_primitive = "0.1"
num = "0.1"
byteorder = "1.1"

[dev-dependencies]
modbus-test-server = {path = "test-server", version="0.0.*"}
clap = "2.5"

[features]
default=[]
modbus-server-tests = ["modbus-test-server/modbus-server-tests"]
