[package]
authors = ["Falco Hirschenberger <falco.hirschenberger@gmail.com>"]
description = "Pure Rust modbus implementation"
documentation = "https://hirschenberger.github.io/modbus-rs"
homepage = "https://github.com/hirschenberger/modbus-rs.git"
keywords = [
    "modbus",
    "hardware",
]
license = "MIT"
name = "modbus"
readme = "README.md"
repository = "https://github.com/hirschenberger/modbus-rs.git"
version = "1.0.3"

[dependencies]
byteorder = "1"
enum_primitive = "0.1"

[dev-dependencies]
clap = "2"

[dev-dependencies.modbus-test-server]
path = "test-server"
version = "0.0.*"

[features]
default = []
modbus-server-tests = ["modbus-test-server/modbus-server-tests"]
