[package]
name = "modbus-test-server"
version = "0.0.3"
authors = ["Falco Hirschenberger <falco.hirschenberger@gmail.com>"]
repository = "https://github.com/hirschenberger/modbus-rs.git"
homepage = "https://github.com/hirschenberger/modbus-rs.git"
documentation = "https://hirschenberger.github.io/modbus-rs"
license = "MIT"
description = "Libmodbus based server to test the rust modbus package"
keywords = ["modbus", "hardware", "test"]
build = "build.rs"

[lib]
name = "test_server"
path = "lib.rs"

[dependencies]
lazy_static = "0.2"

[features]
default=[]
modbus-server-tests = []
